test/bad/str_bool_assignment.lat
int main() {
	string str = "asdf";
	boolean b = false;
	str = b;
}
